<resources>
    <string name="app_name">csci5115</string>
    <string name="add_items">+</string>
    <string name="recipes">Recipes</string>
    <string name="edit">Edit Item</string>
    <string name="view_item">View Item</string>
    <string name="log_in">Log in</string>
    <string name="search_by_category">Search By Category</string>
    <string name="add">Add</string>
    <string name="add_all_items">Add All Items</string>
    <string name="enter_item_name">Enter Item Name</string>
    <string name="todo">TODO</string>
    <string name="textview">TextView</string>
    <string name="fruits">Fruits</string>
    <string name="vegetables">Vegetables</string>
    <string name="meats">Meats</string>
    <string name="snack_bar_undo">Undo</string>
    <string name="done">Done</string>
    <string-array name="location_array">
        <item>Fridge</item>
        <item>Freezer</item>
        <item>Pantry</item>
    </string-array>
</resources>